# Qt-Restaurant-Ordering-System

./: README.md
RestaurantAdmin/: CMakeLists.txt  adminmainwindow.cpp  adminmainwindow.h  adminmainwindow.ui  main.cpp
RestaurantAdmin/dish/: admindishwidget.cpp  admindishwidget.h  disheditdialog.cpp  disheditdialog.h
RestaurantAdmin/login/: adminloginwidget.cpp  adminloginwidget.h  adminloginwidget.ui  passwordrecoverydialog.cpp  passwordrecoverydialog.h
RestaurantAdmin/model/: diningtable.h  dish.h
RestaurantAdmin/network/: networkmanager.cpp  networkmanager.h  serverconfig.h
RestaurantAdmin/order/: adminorderwidget.cpp  adminorderwidget.h
RestaurantAdmin/resources/: control-arrows.qrc  down-arrow.xpm  up-arrow.xpm
RestaurantAdmin/table/: admintablewidget.cpp  admintablewidget.h
RestaurantClient/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  tablewidget.ui
RestaurantClient/model/: CartItem.h  DiningTable.h  Dish.h
RestaurantClient/network/: networkmanager.cpp  networkmanager.h  serverconfig.h
RestaurantClient/widget/: blindboxdialog.cpp  blindboxdialog.h  cartitemwidget.cpp  cartitemwidget.h  cartitemwidget.ui  cartwidget.cpp  cartwidget.h  cartwidget.ui  coverwidget.cpp  coverwidget.h  dishcard.cpp  dishcard.h  dishcard.ui  dishwidget.cpp  dishwidget.h  dishwidget.ui  orderdetailwidget.cpp  orderdetailwidget.h  orderdetailwidget.ui  paywidget.cpp  paywidget.h  paywidget.ui  tablewidget.cpp  tablewidget.h  tablewidget.ui
springboot/restaurantServer/: pom.xml
springboot/restaurantServer/src/main/java/org/csu/restaurant/restaurantserver/: RestaurantServerApplication.java
springboot/restaurantServer/src/main/java/org/csu/restaurant/restaurantserver/config/: OrderQueueConfig.java
springboot/restaurantServer/src/main/java/org/csu/restaurant/restaurantserver/controller/: AdminController.java  DishController.java  GlobalExceptionHandler.java  OrderController.java  PaymentController.java  RankController.java  RewardController.java  TableController.java
springboot/restaurantServer/src/main/java/org/csu/restaurant/restaurantserver/dto/: HotDishDTO.java  OrderDTO.java  OrderDetailDTO.java  OrderItemDTO.java  OrderTaskDTO.java  PaymentDTO.java  RewardChanceDTO.java  RewardResultDTO.java  StockAdjustmentDTO.java  TableStatusDTO.java
springboot/restaurantServer/src/main/java/org/csu/restaurant/restaurantserver/entity/: Admin.java  DiningTable.java  Dish.java  DishCategory.java  Order.java  OrderItem.java  Payment.java  Reward.java
springboot/restaurantServer/src/main/java/org/csu/restaurant/restaurantserver/mapper/: AdminMapper.java  DishMapper.java  OrderItemMapper.java  OrderMapper.java  PaymentMapper.java  (+3 more)
springboot/restaurantServer/src/main/resources/: application.yaml
springboot/restaurantServer/src/main/resources/mapper/: AdminMapper.xml  DishMapper.xml  OrderItemMapper.xml  OrderMapper.xml  PaymentMapper.xml  RankMapper.xml  RewardMapper.xml  TableMapper.xml
springboot/restaurantServer/src/test/java/org/csu/restaurant/restaurantserver/: RestaurantServerApplicationTests.java
(+15 files in other folders)
